[package]
name = "onrain_befriender"
version = "0.1.3"
authors = ["zegevlier <iamascratcher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.6"}
tokio = { version = "0.2", features = ["macros"] }
rand = "0.7.2"
yaml-rust = "0.4.4"

[profile.release]
